# pygsm

./: .gitignore  CLAUDE.md  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: api.md
pygsm/: __init__.py  sky.py  util.py
pygsm.egg-info/: PKG-INFO  SOURCES.txt
pygsm/data/beams/fwhm/: planck.txt  wmap.txt
tests/: test_sky.py  test_util.py
